--- a/polymer/cine/index.html
+++ b/polymer/cine/index.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="import" href="wc-film.html">
-    <link rel="import" href="wc-window.html">
-    <link rel="import" href="wc-ticket.html">
-    <link rel="import" href="wc-kiosko.html">
+    <link rel="import" href="wc-text.html">
 </head>
 
 <body>
-    <div class="movies">
-        <wc-film title="Mi título 1" description="mi descripcion 1"></wc-film>
-        <wc-film title="Mi título 2" description="mi descripcion 2"></wc-film>
-        <wc-film title="Mi título 3" description="mi descripcion 3"></wc-film>
-    </div>
-    </wc-window>
-    <wc-kiosko id="myk"></wc-kiosko>
+    <wc-text></wc-text>
 </body>
 
 </html>
