--- a/polymer/cine/index.html
+++ b/polymer/cine/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="import" href="wc-text.html">
+    <link rel="import" href="wc-test.html">
 </head>
 
 <body>
-    <wc-text></wc-text>
+    <wc-test>
+    </wc-test>
 </body>
 
 </html>
