--- a/polymer/cine/wc-window.html
+++ b/polymer/cine/wc-window.html
@@ -7,8 +7,9 @@
         <style>
         .window {
             text-align: center;
+            color: var(--color);
+            background: var(--fondo, blue);
         }
-        
         #movies: {
             box-shadow: 1px 1px 10px #222;
             padding: 100px;
@@ -19,9 +20,8 @@
         <div class="window" on-wc-film-session="createTicket">
             <h1> {{name}}</h1>
             <div id="movies">
-                <!-- <content></content> -->
                 <template is="dom-repeat" items="{{films}}" as="film">
-                    <wc-film title="{{film.title}}" description="{{film.description}}"></wc-film> <!-- cover="{{film.cover}}" -->
+                    <wc-film title="{{film.title}}" description="{{film.description}}"></wc-film>
                 </template>
             </div>
         </div>
